webhook-admission/kyverno/latest-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-good
  labels:
    app.kubernetes.io/name: test-app
spec:
  containers:
    - name: nginx
      image: maheshkumars772/nginx:latest
      resources:
        limits:
          cpu: "500m"
          memory: "512Mi"
        requests:
          cpu: "100m"
          memory: "128Mi"
