webhook-admission/kyverno/pod-without-resource-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-no-limits
  labels:
    app.kubernetes.io/name: test-app
spec:
  containers:
    - name: nginx
      image: nginx:latest
