webhook-admission/kyverno/test-no-label.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-no-label
spec:
  containers:
    - name: nginx
      image: nginx:latest
      resources:
        limits:
          cpu: "500m"
          memory: "512Mi"
        requests:
          cpu: "100m"
          memory: "128Mi"
