webhook-admission/kyverno/test-priveledged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-privileged
  labels:
    app.kubernetes.io/name: test-app
spec:
  containers:
    - name: nginx
      image: nginx:latest
      resources:
        limits:
          cpu: "500m"
          memory: "512Mi"
        requests:
          cpu: "100m"
          memory: "128Mi"
      securityContext:
        privileged: true
